Fix broken image links Fix issue where math.svg didn't show on IE11 Fix issue where cards show strangely on IE11

--- a/docs/custom.css
+++ b/docs/custom.css
@@ -26,6 +26,11 @@
   width:auto;
 }
 
+/*Fix internet explorer card issue*/
+.card-img-top {
+height:auto;
+}
+
 div.bodyColumn {
   max-width:300px;
   margin: auto;
